infra/overlays/dev/odoo-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
spec:
  replicas: 2
